# MerkleIndex

./: Cargo.toml  Containerfile  README.md  docker-compose.yml  entrypoint.sh
cli/: Cargo.toml  metadata.scale
cli/src/: command.rs  connector.rs  healthindex.rs  lib.rs  main.rs
node/: Cargo.toml
pallets/index/: Cargo.toml
pallets/index/src/: lib.rs  mock.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: entrypoint.sh
