[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
subxt = { version = "0.32.1" }
tokio = { version = "1.33", features = ["macros", "time", "rt-multi-thread"] }
subxt-signer = "0.32.1"